DELAY_COMP_PARSE_EXECUTE

--- a/Config/daplick.cfg
+++ b/Config/daplick.cfg
@@ -1,17 +1,10 @@
 # choose st-link/j-link/dap-link etc.
-# choose CMSIS-DAP Debugger
-adapter driver cmsis-dap
-# select SWD port
+source [find interface/cmsis-dap.cfg]
 transport select swd
-
 # 0x10000 = 64K Flash Size
-# 1MB on FireDebugger
-set FLASH_SIZE 0x100000
-
+# 0x80000 = 512K Flash Size
+set FLASH_SIZE 0x80000
 source [find target/stm32f1x.cfg]
-
-# download speed = 5MHz
-# 5MHz on FireDebugger
-adapter speed 5000
-
-# connect under reset
+# download speed = 10MHz
+adapter speed 10000
+#reset_config none
